# emqtt-bench-huawei

./: .dockerignore  BENCHMARK_RESULTS_COLLECTION.md  CHANGELOG.md  CODE_ANALYSIS_REPORT.md  CONFIG_GUIDE.md  CONNECTION_TEST_GUIDE.md  DEVICE_ID_GUIDE.md  DISPLAY_SYSTEM_GUIDE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  Dockerfile  HUAWEI_AUTH_CORRECTION.md  HUAWEI_CLOUD_FINAL_GUIDE.md  HUAWEI_CLOUD_GUIDE.md  HUAWEI_CLOUD_PREFIX_SOLUTION.md  HUAWEI_CLOUD_SUCCESS_GUIDE.md  HUAWEI_CLOUD_TEST_GUIDE.md  HUAWEI_CLOUD_WORKING_SOLUTION.md  HUAWEI_ERLANG_AUTH_GUIDE.md  INTEGRATION_SUMMARY.md  PROCESS_MANAGEMENT_GUIDE.md  PROMETHEUS_MONITORING_GUIDE.md  README.md  README_PROCESS_MANAGEMENT.md  analyze_connection_tests.sh  benchmark_display_system.py  benchmark_report_20250923_172051.md  benchmark_report_20250923_173215.md  benchmark_report_20250923_173309.md  benchmark_report_20250924_082556.md  cleanup_ports.sh  connection_test_metrics_recommendations.md  debug_auth.sh  debug_auth_info.sh  debug_device_id.sh  debug_prefix_auth.py  diagnose_huawei_auth.sh  display_config.json  display_example.py  docker-compose.yml  emqtt_bench_config.conf  (+25 more)
metrics/: AUTO_COLLECTOR_GUIDE.md  DATA_FILTERING_GUIDE.md  DATA_MATCHING_FIX_GUIDE.md  DUPLICATE_FILES_FIX.md  DYNAMIC_TEST_DISPLAY_GUIDE.md  HUAWEI_BROADCAST_INTEGRATION_SUMMARY.md  HUAWEI_BROADCAST_MAIN_INTEGRATION.md  HUAWEI_BROADCAST_TEST_GUIDE.md  HUAWEI_CLOUD_TEST_SPLIT_GUIDE.md  HUAWEI_PUBLISH_THROUGHPUT_FIX_GUIDE.md  HUAWEI_PUBLISH_THROUGHPUT_ZERO_ANALYSIS.md  MARKDOWN_REPORT_GUIDE.md  QOS_CONFIGURATION_GUIDE.md  README.md  README_数据过滤.md  (+39 more)
(+9 files in other folders)
