[project]
name = "metrics"
version = "0.1.0"
description = "eMQTT-Bench Prometheus metrics collector and analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "prometheus-client>=0.19.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "schedule>=1.2.0",
    "psutil>=5.9.0",
]

[project.scripts]
emqtt-test = "emqtt_test_manager:main"
